--- a/project-xczx2-portal-vue-ts/package.json
+++ b/project-xczx2-portal-vue-ts/package.json
@@ -22,6 +22,7 @@
     "sha.js": "^2.4.11",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
+    "vue-cli": "^2.9.6",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1",
@@ -46,6 +47,3 @@
     "vue-template-compiler": "^2.6.10"
   }
 }
-
-
-
