修改系统微服务与内容管理微服务 添加Nacos配置 在Nacos中可以管理服务

--- a/xuecheng-plus-system/xuecheng-plus-system-api/src/main/resources/bootstrap.yml
+++ b/xuecheng-plus-system/xuecheng-plus-system-api/src/main/resources/bootstrap.yml
@@ -6,6 +6,15 @@ server:
 spring:
   application:
     name: system-service
+  cloud:
+    nacos:
+      # 阿里云服务器 8848端口
+      server-addr: 123.57.146.121:8848
+      discovery:
+        namespace: dev
+        group: xuecheng-plus-project
+
+
 
 # 日志文件配置路径
 logging:
