--- a/xuecheng-plus-content/xuecheng-plus-content-api/pom.xml
+++ b/xuecheng-plus-content/xuecheng-plus-content-api/pom.xml
@@ -22,6 +22,11 @@
         </dependency>
     <!--cloud的基础环境包-->
         <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-context</artifactId>
         </dependency>
