--- a/xuecheng-plus-content/xuecheng-plus-content-api/src/main/resources/bootstrap.yml
+++ b/xuecheng-plus-content/xuecheng-plus-content-api/src/main/resources/bootstrap.yml
@@ -5,7 +5,13 @@ server:
 #微服务配置
 spring:
   application:
-    name: content-api
+    name: content-service
+  cloud:
+    nacos:
+      server-addr: 123.57.146.121:8848
+      discovery:
+        namespace: dev
+        group: xuecheng-plus-project
 # 日志文件配置路径
 logging:
   config: classpath:log4j2-dev.xml
