--- a/xuecheng-plus-content/xuecheng-plus-content-service/src/main/resources/bootstrap.yaml
+++ b/xuecheng-plus-content/xuecheng-plus-content-service/src/main/resources/bootstrap.yaml
@@ -30,5 +30,5 @@ spring:
 #  config: classpath:log4j2-dev.xml
 #
 ## mybatis-plus
-#mybatis-plus:
-#  mapper-locations: classpath:/mapper/*.xml
+mybatis-plus:
+  mapper-locations: classpath:/mapper/*.xml
