--- a/xuecheng-plus-search/src/main/resources/bootstrap.yml
+++ b/xuecheng-plus-search/src/main/resources/bootstrap.yml
@@ -3,12 +3,12 @@ spring:
     name: search
   cloud:
     nacos:
-      server-addr: 192.168.101.65:8848
+      server-addr: 123.57.146.121:8848
       discovery:
-        namespace: dev148
+        namespace: ${spring.profiles.active}
         group: xuecheng-plus-project
       config:
-        namespace: dev148
+        namespace: ${spring.profiles.active}
         group: xuecheng-plus-project
         file-extension: yaml
         refresh-enabled: true
